# python-games

./: .gitignore  README.md  banner.py  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
Breakout/: README.md  ball.py  main.py  paddle.py  scoreboard.py
Hangman/: README.md  main.py
PingPong/: README.md  ball.py  main.py  menu.py  reflector.py  scoretrack.py  sound.py
SnakeGame/: scoreboard.py
SolarSystemSimulator/: logic.py  main.py
tests/test_solar_system/: test_simulator.py
