[project]
name = "python-games"
version = "1.0.0"
description = "A collection of classic games built with Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "AnshMNSoni"}
]
keywords = ["games", "python", "tkinter", "turtle", "blackjack", "snake", "pacman"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"

[tool.pyright]
extraPaths = [
    "./BlackJack",
    "./SnakeGame", 
    "./PingPong",
    "./Hangman",
    "./KBC",
    "./Breakout",
    "./Pacman",
    "./TurtleCrossing",
    "./RockPaperScissor"
]
pythonVersion = "3.7"
